2002-06-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h, eval.c, eval.h:  Removed compile time option
	MEMOIZE_LOCALS to clean up the code.  Now, caching of local
	variable positions during memoization is mandatory.  However, the
	option to disable the caching has most probably not been used
	anyway.

2002-06-18  Marius Vollmer  <mvo@zagadka.ping.de>

	* print.c (scm_simple_format): Print missing part of format before
	~% control.  Thanks to Daniel Skarda!

2002-06-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* mkstemp.c: Added exception notice to license statement.

2002-05-22  Marius Vollmer  <mvo@zagadka.ping.de>

	* numbers.c (mem2ureal): When returning an inexact zero, make sure
	it is represented as a floating point value so that we can change
	its sign.

        From John W. Eaton  <jwe@bevo.che.wisc.edu>

	* numbers.c (idbl2str): Don't omit sign when printing negative zero.

2002-05-14  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* gc_os_dep.c: For I386/OPENBSD, allow for `__i386__'
	in addition to `i386'.  Thanks to Dale P. Smith.

2002-05-08  Marius Vollmer  <mvo@zagadka.ping.de>

	* eq.c (real_eqv): New.
	(scm_eqv_p): Use it when comparing reals and complexes.

	* numbers.c: Include <string.h>, for strncmp.
	(mem2complex): Do not create negative NaNs.
	(scm_leq_p, scm_geq_p): Explicitely return #f when comparing a
	NaN.
	(scm_inexact_to_exact): Signal error when converting a NaN.

2002-05-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* posix.c (scm_putenv): Handle removing variables explicitely by
	calling unsetenv.

	From John W. Eaton.

	* numbers.h: Conditionally include floatingpoint.h, ieeefp.h, and
	nan.h.	Provide declarations for scm_inf_p, scm_nan_p, scn_inf,
	and scm_nan.
	* numbers.c: [SCO && ! HAVE_ISNAN] (isnan): New function.
	[SCO && ! HAVE_ISINF] (isinf): New function.
	(xisinf, xisnan): New functions.
	(IS_INF): Delete.
	(isfinite): Define in terms of xisinf.
	(scm_inf_p, scm_nan_p): New functions.